--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
   "help": "",
   "url": "",
   "logo": "",
+  "target": "OnPrem",
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
